[bug 808592] Set img and video max-width to 100% on mobile.

--- a/media/less/mobile/wiki.less
+++ b/media/less/mobile/wiki.less
@@ -134,6 +134,11 @@
       font-size: 16px;
     }
 
+    img,
+    video {
+      max-width: 100%;
+    }
+
     .note,
     #toc {
       background: #eef2f5;
